@@ -64,7 +64,7 @@ package body System.Partition_Interface is
       Key     : in Debug_Key := Private_Debug_Key)
      renames Print_Debug_Info;
 
-   use System.Garlic.Units.X;
+   use System.Garlic.Units.Complex;
 
    function Convert is
      new Ada.Unchecked_Conversion
